# openssl-cmake

./: .gersemirc  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-on-windows.bat  build-on-windows.ps  build.bat  easy-tls.c  main.c  openssl.cmake  test.c  zlib.cmake
.github/workflows/: cmake-multi-platform.yml
